# Time_Series_Forecasting

./: Analise_consumo.py  CONSUMO_MENSAL_DE_ENERGIA_ELÉTRICA_POR_CLASSE.xlsx  Electricity_Consumption.pbix  README.md  base_compact.csv  base_expanded.csv  base_wide.csv  requirements.txt  tratamento.pbix
Electricity_consumption/: Electricity_Consumption.pbit  base_compact.csv  base_expanded.csv  base_powerbi.csv  base_wide.csv  main.ipynb  pyproject.toml
dados_INMET/$2a$10$Au0qW0XYyyqzd.pJ9eJKOpmPVTnNw7f6eH54uZ6ooZWQkTGzf6BS/: dados_A001_M_2004-01-01_2025-07-31.csv  dados_A002_M_2004-01-01_2025-07-31.csv  dados_A003_M_2004-01-01_2025-07-31.csv  dados_A004_M_2004-01-01_2018-06-20.csv  dados_A005_M_2004-01-01_2025-07-31.csv  dados_A006_M_2004-01-01_2006-09-24.csv  dados_A007_M_2004-01-01_2005-08-15.csv  dados_A008_M_2004-01-01_2013-02-19.csv  dados_A009_M_2004-12-16_2025-07-31.csv  dados_A010_M_2005-03-03_2025-07-31.csv  dados_A011_M_2006-07-14_2025-07-31.csv  dados_A012_M_2006-10-20_2025-07-31.csv  dados_A013_M_2007-07-12_2025-07-31.csv  dados_A014_M_2007-07-17_2025-07-31.csv  dados_A015_M_2007-02-02_2025-07-31.csv  dados_A016_M_2007-05-22_2025-07-31.csv  dados_A017_M_2007-04-17_2025-07-31.csv  dados_A018_M_2006-11-30_2025-07-31.csv  dados_A019_M_2006-12-19_2025-07-31.csv  dados_A020_M_2007-01-22_2025-07-31.csv  dados_A021_M_2007-01-25_2025-07-31.csv  dados_A022_M_2007-06-01_2025-07-31.csv  dados_A023_M_2007-05-20_2025-07-31.csv  dados_A024_M_2007-06-03_2025-07-31.csv  dados_A025_M_2007-05-16_2025-07-31.csv  dados_A026_M_2007-11-23_2025-07-31.csv  (+569 more)
env/: pyvenv.cfg
(+604 files in other folders)
