[project]
name = "electricity-consumption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "darts[torch]>=0.45.0",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.4",
    "statsforecast>=2.0.2",
    "torch>=2.12.1",
]
